Fix `var(--gap-between-dropdown-toggle)` defined two times

--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -132,7 +132,6 @@ $use-dropdown-toggle-animation: true;
 
   // Let's make space for the nav-toggle/arrow
   .menu-item.menu-item-has-children a {
-    padding-right: var(--gap-between-dropdown-toggle);
     transition: padding .2s cubic-bezier(.19, 1, .22, 1), background-color .2s cubic-bezier(.19, 1, .22, 1);
   }
 
